--- a/weapp/static_v2/js/view/mall_order_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_filter_view/template.html
@@ -80,6 +80,10 @@
 				{{if mallType == 0}}
 				<option value="1">惠惠卡支付订单</option>
 				{{/if}}
+				{{if mallType == 0}}
+				<!-- 非自营品台 显示'团购订单' -->
+				<option value="2">团购订单</option>
+				{{/if}}
 			</select>
 			{{if mallType == 0}}
 			<i class="xui-tip xa-tip">?
