--- a/weapp/mall/templates/mall/editor/promotion/card_exchange.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange.html
@@ -58,6 +58,31 @@
 			line-height: 24px;
 			margin-right: 10px;
 		}
+		.xui-detail{
+			display: inline-block;
+			border:1px solid #e1e1e1;
+			padding:3px 5px;
+			margin-top: 5px;
+			margin-right: 12px;
+			cursor: pointer;
+		}
+		.xui-i-del{
+			margin-left: 10px;
+			background: #207cbe;
+			border-radius: 25px;
+			color: #fff;
+			display: inline-block;
+			font-size: 23px;
+			width: 22px;
+			height: 22px;
+			line-height: 24px;
+			text-align: center;
+			position: absolute;
+		}
+		.xui-i-del:hover{
+			text-decoration: none;
+			color: #f3f3f3;
+		}
 		.xui-hide{
 			display: none;
 		}
@@ -95,29 +120,32 @@
 	        	<td>微众卡</td>
 			</tr>
 			<tr>
-	        	<th>兑换奖项：</th>
+	        	<th>兑换奖项：
+	        		<a class="xui-detail">使用详情</a>
+	        	</th>
 	        	<td>
 	        	    <form>
-		        		{% for item in card_exchange_dic.prize%}
 		        		<div class="xui-i-exchange xa-i-exchange">
+		        		    {% for item in card_exchange_dic.prize%}
 		        		    <div class="xui-i-put">
 			        		    <div>
 			        		    	使用积分：<input type="text" class="xa-integral xui-i-integral xui-hide" name="integral" readonly=true value="{{item.integral}}">
 			        		    	<span class="xa-exchangeSpan">{{item.integral}}</span>
 			        		    </div>
-			                    <div>
+			                    <div class="pr">
 			                    	兑换微众卡：<input type="text" class="xui-i-money xa-money xui-hide" name="money" readonly=true value="{{item.money}}">
 			                    	<span class="xa-exchangeSpan">{{item.money}}</span>
 			                    	<span class=" mr30">元</span>
-					                号段：<input type="text" class="xui-i-num xa-snum xui-hide" name="snum" readonly=true value="{{item.card_number}}">
-					                <span class="xa-exchangeSpan">{{item.card_number}}</span>
+					                号段：<input type="text" class="xui-i-num xa-snum xui-hide" name="snum" readonly=true value="{{item.s_num}}">
+					                <span class="xa-exchangeSpan">{{item.s_num}}</span>
 					                <span class="ml5 mr5">-</span>
-					                <input type="text" class="xui-i-num xa-endnum xui-hide" name="endnum" readonly=true value="{{item.card_number}}">	
-					                <span class="xa-exchangeSpan">{{item.card_number}}</span>	                
+					                <input type="text" class="xui-i-num xa-endnum xui-hide" name="endnum" readonly=true value="{{item.end_num}}">	
+					                <span class="xa-exchangeSpan">{{item.end_num}}</span>	
+                                    <a href="###" class="xui-i-del xui-hide" title="删除">&times;</a>
 			                    </div>
 			                </div>
+			                {% endfor %}
 		        		</div>
-                        {% endfor %}
 	        		</form>
 	        		<div class="xui">
 				    	<a class="xui-i-add xa-add xui-hide">+添加</a>
@@ -148,7 +176,9 @@
 	        	<td>微众卡</td>
 			</tr>
 			<tr>
-	        	<th>兑换奖项：</th>
+	        	<th>兑换奖项：
+	        		<a class="xui-detail">使用详情</a>
+	        	</th>
 	        	<td>
 	        	    <form>
 		        		<div class="xui-i-exchange xa-i-exchange">
@@ -157,7 +187,7 @@
 			        		    	使用积分：<input type="text" class="xa-integral xui-i-integral" name="integral">
 			        		    	<span class="xa-exchangeSpan"></span>
 			        		    </div>
-			                    <div>
+			                    <div class="pr">
 			                    	兑换微众卡：<input type="text" class="xui-i-money xa-money" name="money">
 			                    	<span class="xa-exchangeSpan"></span>
 			                    	<span class="ml5 mr30">元</span>
@@ -165,7 +195,8 @@
 					                <span class="xa-exchangeSpan"></span>
 					                <span class="ml5 mr5">-</span>
 					                <input type="text" class="xui-i-num xa-endnum" name="endnum">	
-					                <span class="xa-exchangeSpan"></span>                
+					                <span class="xa-exchangeSpan"></span>
+					                <a href="###" class="xui-i-del" title="删除">&times;</a>              
 			                    </div>
 			                </div>
 		        		</div>
@@ -204,26 +235,54 @@
 		<span class="xa-exchangeSpan"></span>
 		<span class="ml5 mr5">-</span>
 		<input type="text" class="xui-i-num xa-endnum" name="endnum">	
-		<span class="xa-exchangeSpan"></span>              
+		<span class="xa-exchangeSpan"></span>   
+		<a href="###" class="xui-i-del" title="删除">&times;</a>            
 	</div>
 </div>
 </script>
 {% endverbatim %}
 
 <script type="text/javascript">
+function checkNull()
+{
+     var num=0;
+     $("input").each(function(){
+          if($(this).val()=="")
+          {
+               num++;
+          }
+
+     });
+     if(num>0)
+     {
+          return false;
+     }
+     else
+     {
+          return true;
+     }
+}
 
 $(document).ready(function() {
 	var i = 1;
 	$(".xa-add").click(function(){   
 		$("#exchange-input").tmpl().appendTo(".xa-i-exchange");
-	});   
+	});  
+    
+	$(".xui-i-del").eq(0).hide();
+	$(document).on("click",".xui-i-del",function(){
+    	$(this).parents(".xui-i-put").remove();
+	})
+
 	$(".xa-btnSubmit").click(function(){
+        var flag = checkNull()
+        if(!flag){return}
 		if(!$("input").attr("readonly")){
 			$("input").attr("readonly",true).hide();
-
+            $(".xui-i-del").hide();
             var exchange_input = $(".xa-exchangeSpan").prev();
             for(var j=0;j<exchange_input.length;j++){
-            	$(".xa-exchangeSpan")[j].innerHTML = aexchange_input[j].value;
+            	$(".xa-exchangeSpan")[j].innerHTML = exchange_input[j].value;
             }
             $(".xa-exchangeSpan").show();
 
@@ -268,11 +327,12 @@ $(document).ready(function() {
 			    error: function(resp) {
 			        W.showHint('error', '操作失败')
 			    }
-			})          
+			})           
 		}else{
             $("input").attr("readonly",false).show();
 			$(this).html("保存"); 
 			$(".xa-add").show();
+			$(".xui-i-del").show().eq(0).hide();
 			$(".xui-bindPhoneNum").show();
 			$(".xa-exchangeSpan").hide();
 		}     
