修改详情页面

--- a/weapp/mall/templates/mall/editor/promotion/card_exchange.html
+++ b/weapp/mall/templates/mall/editor/promotion/card_exchange.html
@@ -257,6 +257,17 @@ $(document).ready(function() {
 
 	$(".xa-detail").click(function(){
 		var card_num = [];
+		var snum = $(".xa-snum")
+	    var endnum = $(".xa-endnum");
+		for(i=0;i<snum.length;i++){
+                var snumData = snum[i].value;
+                var endnumData = endnum[i].value;
+				var item = {
+                    snum:snumData,
+                    endnum:endnumData
+				}
+				card_num.push(item);
+			} 
 		W.getApi().call({
 			    method: 'get',
 			    app: 'mall2',
